--- a/questions.html
+++ b/questions.html
@@ -9,7 +9,7 @@
     <body>
         <!-- content here  -->
 
-        <div class="box">
+        <div class="box" id="questionScreen" >
            <div class="title">
               Jayway Quiz test
            </div>
@@ -20,7 +20,44 @@
            </div>
 
            <div class="questionBox">
-               what
+               Where is the correct place to insert a JavaScript?
+           </div>
+           <div class="optionBox">
+                <span>The head section</span>
+                <span>Both the head section and the body section are correct</span>
+                <span>The body section</span>
+                <span>None of the above</span>
+           </div>
+
+           <div class="footer">
+               <button>
+                   Next
+               </button>
+               <button>
+                   Show Result
+               </button>
+           </div>
+
+        </div>
+
+        <div class="box" id="resultScreen" style="display: none;">
+           <div class="title">
+               Jayway Quiz Result
+           </div>
+
+           <div class="resultBox">
+               <label>Questions : </label>
+               <span id="totalQuestion">10</span>
+               <label>Attempt : </label>
+               <span id="attemptQuestion">1</span>
+               <label>Correct : </label>
+               <span id="correctAnswers">1</span>
+               <label>Wrong : </label>
+               <span id="wrongAnswers">1</span>
+           </div>
+
+           <div class="buttonBox">
+               <a href="index.html">Start Again</a>
            </div>
 
         </div>
