script is ready

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             
           <div class="rightSide">
             <h1>Jayway Quiz</h1>
-            <h2>Funktioner :- </h2>
+            <h2>Features :- </h2>
 
             <ul>
-                <li>10 Frågor - 15 sek vardera</li>
-                <li>200 sekunders timer</li>
-                <li> Slumpmässiga frågor</li>
-                <li>Få resultat</li>
+                <li>10 Questions - 15 sek each</li>
+                <li>200 Seconds timer</li>
+                <li> Random Questions</li>
+                <li>Get Result</li>
             </ul>
 
             <a href="questions.html"> Start Quiz</a>
@@ -33,7 +33,7 @@
 
     </body>
 
-    <!--downolad jquery: https://jquery.com/download/-->
+    <!--download jquery: https://jquery.com/download/-->
 
     <script src="js/jquery-3.5.1.min.js"></script>
 
